[package]
name = "foraget"
version = "0.1.0"
authors = ["Mohammed Ismail Ansari <team.terminal@gmail.com>"]
edition = "2018"
description = "A simple universal package manager for Unix-like systems"
readme = "README.md"
repository = "https://github.com/myTerminal/foraget"
license = "MIT"
keywords = ["package-management"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.1"
ansi_term = "0.12.1"